change beneficiary_monthly primary key (remove partd_contract_number_id since we can have empty/null values)